--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -96,7 +96,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=TiendaLolita
-main.class=Vista.Login
+main.class=vista.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
